[tool.poetry]
name = "crypto-finance"
version = "0.1.0"
description = ""
authors = ["yedsrjr <edsonr065@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
fastapi = {extras = ["standard"], version = "^0.115.5"}
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
greenlet = "^3.1.1"
ignr = "^2.2"
pydantic = "^2.10.2"
sqlalchemy = "^2.0.36"
aiohttp = "^3.11.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.8.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev app.py'
pre_test = 'task lint'
test = 'pytest --cov=crypto_finance -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
